# ConwaysGameOfLife

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
src/game/: cell.py  game_logic.py  grid.py  rules.py
src/tests/: test_grid.py  test_rules.py
src/utils/: config.py  screenshot.py  theme.py
